--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ pickle-email-*.html
 # Environment files that may contain sensitive data
 .env
 .powenv
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
