--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ db/*.sqlite3
 /doc/features.html
 /doc/specs.html
 /public/cache
+/public/assets
 /public/stylesheets/compiled
 /public/system/*
 /spec/tmp/*
