--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -7,6 +7,13 @@ production:
     # read_timeout: 2
     # open_timeout: 0.5
 
+staging:
+  solr:
+    hostname: rorappdesa03a.munimadrid.es
+    port: 8080
+    log_level: INFO
+    path: /solr-agendas
+
 development:
   solr:
     hostname: localhost
@@ -20,4 +27,4 @@ test:
     port: 8981
     log_level: WARNING
     path: /solr/test
-    
+
