Solr config for preproduction and production environments

--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,11 +1,16 @@
 production:
   solr:
-    hostname: localhost
-    port: 8983
+    hostname: rorsearchpro03a.munimadrid.es
+    port: 8080
     log_level: WARNING
-    path: /solr/production
-    # read_timeout: 2
-    # open_timeout: 0.5
+    path: /solr-agendas
+
+preproduction:
+  solr:
+    hostname: rorsearchpre03a.munimadrid.es
+    port: 8080
+    log_level: WARNING
+    path: /solr-agendas
 
 staging:
   solr:
