--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ db/*.sqlite3
 .sass-cache
 /config/config.yml
 /config/database.yml
+/config/secrets.yml
 /config/deploy-secrets.yml
 /coverage.data
 /coverage/
