--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,44 +1,36 @@
----
 engines:
-  brakeman:
-    enabled: true
-  bundler-audit:
-    enabled: true
-  csslint:
-    enabled: true
-  coffeelint:
+  rubocop:
     enabled: true
   duplication:
     enabled: true
     config:
       languages:
-      - ruby
-      - javascript
+        ruby:
+        javascript:
+  brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
   eslint:
+    enabled: true
+  csslint:
+    enabled: true
+  scss-lint:
     enabled: true
   fixme:
     enabled: true
-  rubocop:
+  markdownlint:
     enabled: true
 ratings:
   paths:
-  - Gemfile.lock
-  - "**.erb"
-  - "**.haml"
-  - "**.rb"
-  - "**.rhtml"
-  - "**.slim"
-  - "**.css"
-  - "**.coffee"
-  - "**.inc"
-  - "**.js"
-  - "**.jsx"
-  - "**.module"
+  - app/**/*
+  - lib/**/*
 exclude_paths:
-- config/
+- app/assets/fonts/
+- app/assets/images/
+- bin/rails
+- bin/rake
 - db/
-- spec/
-- test/
-- vendor/
-- "**.min.js"
-- app/assets/javascripts/dependencies
+- files/
+- public/
+- tmp/
