--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ db/*.sqlite3
 /public/stylesheets/compiled
 /public/system/*
 /spec/tmp/*
+/spec/examples.txt
 /cache
 /capybara*
 /capybara-*.html
