Configure Rollbar for exception notifications

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -5,6 +5,7 @@ default: &default
   facebook_secret: ""
   google_oauth2_key: ""
   google_oauth2_secret: ""
+  rollbar_server_token: ""
 
 apis: &apis
   census_api_end_point: ""
