--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ db/*.sqlite3
 /config/database.yml
 /config/secrets.yml
 /config/deploy-secrets.yml
+/config/sunspot.yml
 /coverage.data
 /coverage/
 /db/*.javadb/
