--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - gem install bundler
 before_script:
   - "for i in config/*.example; do cp \"$i\" \"${i/.example}\"; done"
+  - rm config/sunspot.yml # Travis generate his own solr configuration
   - bundle exec rake db:drop db:create db:migrate
 script:
   - RAILS_ENV=test bundle exec rake assets:precompile
