Add registry_api_endpoint to secrets example file

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -15,6 +15,7 @@ apis: &apis
   sms_end_point:  ""
   sms_username: ""
   sms_password: ""
+  registry_api_endpoint: ""
 
 beta_site: &beta_site
   beta_site: true
